[package]
name = "god_mode"
version = "0.1.1"
edition = "2021"
authors = ["Anshul Sanghi <contact@anshulsanghi.tech>"]
description = "A macro that replaces unsafe blocks with a friendlier name to not sound as bad"
license = "Apache-2.0"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
